# fms-24

./: 404.html  README.md  add_conda_packages.sh  config.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: basic-code-quality.yaml  ci.yml  code-coverage.yaml  docs.yml
docs/: documentation.md  index.md
documentation/: index.html
examples/: fake.py  index.html
search/: search_index.json
src/: __init__.py  bomd.py  bundle.py
src/fms24/: __init__.py  __main__.py  bomd.py  bundle.py  utils.py
tests/: test_bomd.py  test_utils.py
tests/test_bomd/: config.yaml  geom.xyz  test_bomd.py
