[tool.poetry]
name = "fms24"
version = "0.1.0"
description = "\"FMS rewritten in 2024 using PyTorch\""
authors = ["pablo unzueta <punzu001@ucr.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ase = "^3.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
