[tool.poetry]
name = "fms24"
version = "0.1.0"
description = "\"FMS rewritten in 2024 using PyTorch\""
authors = ["pablo unzueta <punzu001@ucr.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ase = "^3.22.1"
torch = "^2.0.1"
numpy = "^2.0.1"
pandas = "^1.5.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
markdown-include = "^0.8.1"
pymdown-extensions = "^10.9"
mkdocstrings = {version = "^0.25.2", extras = ["python"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
